--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.2",
     "twig": "^1.16.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
