--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "jimp": "^0.22.10",
     "mysql2": "^3.6.2",
+    "pdf-parse": "^1.1.1",
     "twig": "^1.16.0"
   },
   "devDependencies": {
