--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jimp": "^0.22.10",
-    "mysql2": "^3.6.2",
+    "mysql2": "^3.6.3",
     "pdf-parse": "^1.1.1",
+    "sequelize": "^6.35.0",
     "twig": "^1.16.0"
   },
   "devDependencies": {
