--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "jimp": "^0.22.10",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
-    "pdf-parse": "^1.1.1",
     "sequelize": "^6.35.0",
+    "tesseract.js": "^5.0.3",
     "twig": "^1.16.0"
   },
   "devDependencies": {
