Actualización con reconocimiento de monto en los recibos subidos

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "erickson12",
+    "password": "octavio",
     "database": "uabc",
     "host": "localhost",
     "dialect": "mysql"
